--- a/yosul/package.json
+++ b/yosul/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.68.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-location": "~14.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
